--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:mysql://187.58.224.238:3306/teste
-spring.datasource.username=root
-spring.datasource.password=mysql#lr_M@st3r
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://aws.connect.psdb.cloud/sistematransacoes
+spring.datasource.username=fo672ekt4z6kkl0079jv
+spring.datasource.password=pscale_pw_dn1Lrs4h49oXyXoc6PNQrMgFTHyrpw9c99FjoR3XH8K
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#main-2023-11-14-ccd2cz
